ProjetCompil/Verif/Test/fail/typeNonCompatible3.cas
program
   A : 1..5;
   B : real;
begin
    A := B;
end.